kubernetes/apps/base/monitoring/victoriametrics/ingress.yaml
# VictoriaMetrics Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoriametrics
  namespace: monitoring
  labels:
    app.kubernetes.io/name: victoriametrics
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - metrics.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: metrics.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoriametrics
                port:
                  number: 8428
